--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html{
     background-color: rgb(75 85 99);
     font-family: "Roboto" !important;
