--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,40 @@ html, .carousel-section, .trending-section, .pagination-section, body {
 .carousel-caption {
     left: 0 !important;
 }
+.ant-pagination {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: rgba(151, 12, 36, 0.85) !important;
+    font-size: 18px !important;
+    font-weight: 600;
+    font-variant: tabular-nums;
+    line-height: 1.5715;
+    list-style: none;
+    font-feature-settings: 'tnum', "tnum";
+}
+/* .ant-select-selection-item {
+   display: none;
+}
+.ant-select-selector{
+    display: none !important;
+} */
+
+.ant-select-single .ant-select-selector .ant-select-selection-item{
+    display: none;
+}
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector{
+    display: none;
+}
+.ant-select-arrow{
+    display: none !important;
+}
+
+.ant-pagination-item-active{
+    background-color: rgb(194, 192, 181) !important;
+    border: 2px solid !important;
+}
+.ant-pagination-options-quick-jumper input {
+    font-size: 16px !important;
+    color: rgba(151, 12, 36, 0.85) !important;
+}
